Fix menu and add evidences.

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,10 +7,6 @@
         <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
       </a>
       <div class="cart">
-        <a href="">
-          <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
-        </a>
-        <span class="counter">{{ counter }}</span>
       </div>
   
     </div>
@@ -18,8 +14,8 @@
       <button (click)="toggleMenu()">Close</button>
       <ul>
         <li><a href="">All</a></li>
-        <li><a href="">Clothes</a></li>
-        <li><a href="">Electronics</a></li>
+        <li><a href="">Employees</a></li>
+        <li><a href="">Posts</a></li>
       </ul>
     </div>
   </div>
@@ -31,17 +27,13 @@
         </a>
         <ul>
           <li><a href="">All</a></li>
-          <li><a href="">Clothes</a></li>
-          <li><a href="">Electronics</a></li>
+          <li><a href="">Employees</a></li>
+          <li><a href="">Posts</a></li>
         </ul>
       </nav>
       <div class="info">
-        <div class="account">nicolas@nicolas.com</div>
+        <div class="account">jpinzon95@hotmail.com</div>
         <div class="cart">
-          <a href="">
-            <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
-          </a>
-          <span class="counter">{{ counter }}</span>
         </div>
       </div>
     </div>
